--- a/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
+++ b/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
@@ -5,6 +5,11 @@
 /dts-v1/;
 /plugin/;
 #include <dt-bindings/gpio/gpio.h>
+#include <dt-bindings/pinctrl/bcm2835.h>
+#include <dt-bindings/interrupt-controller/irq.h>
+#include <dt-bindings/clock/bcm2835.h>
+
+#include "cma-overlay.dts"
 
 / {
 	compatible = "brcm,bcm2835";
@@ -14,8 +19,19 @@
 		target = <&gpio>;
 		__overlay__ {
 			pwm_pins: pwm_pins {
-				brcm,pins = <12>;
-				brcm,function = <4>; /* Alt1 */
+				brcm,pins = <18>; /* pin 50 */
+				brcm,function = <BCM2835_FSEL_GPIO_OUT>;
+			};
+
+			dsi_lvds_en: dsi_lvds_en {
+				brcm,pins = <11>;
+				brcm,function = <BCM2835_FSEL_GPIO_OUT>;
+			};
+
+			i2c1_pins: i2c1 {
+				brcm,pins = <44 45>;
+				brcm,function = <BCM2835_FSEL_ALT2>;
+				brcm,pull = <BCM2835_PUD_UP>;
 			};
 		};
 	};
@@ -25,7 +41,7 @@
 		frag1: __overlay__ {
 			pinctrl-names = "default";
 			pinctrl-0 = <&pwm_pins>;
-			assigned-clock-rates = <100000000>;
+			assigned-clock-rates = <1000000>;
 			status = "okay";
 		};
 	};
@@ -33,20 +49,38 @@
 	fragment@2 {
 		target-path = "/";
 		__overlay__ {
-			//#gpio-cells = <2>;
-			/* Panel backlight through PWM0 on GPIO 12 */
+			regulator_3v3: regulator_3v3 {
+				compatible = "regulator-fixed";
+				regulator-name = "fixed-3v3";
+				regulator-min-microvolt = <3300000>;
+				regulator-max-microvolt = <3300000>;
+				enable-active-high;
+				regulator-boot-on;
+				regulator-always-on;
+			};
+
 			backlight_lvds: backlight {
 				compatible = "pwm-backlight";
-				pwms = <&pwm 0 5000000>; /* Period of 5000000ns means 200Hz */
-				brightness-levels = <0  1000>;
+				pwms = <&pwm 0 5000000>; /* 200Hz */
+				brightness-levels = <0 1000>;
 				num-interpolated-steps = <1000>;
 				default-brightness-level = <800>;
-				enable-gpios = <&gpio 17 0>; /* Backlight enable... */
+				enable-gpios = <&gpio 17 GPIO_ACTIVE_HIGH>;
+
+				power-supply = <&regulator_3v3>;
+				pinctrl-names = "default";
+				pinctrl-0 = <&pwm_pins_en>;
+				status = "okay";
 			};
 
 			panel: panel {
-				compatible = "chunghwa,claa070wp03xglvds", "simple-panel";
+				compatible = "innolux,g156hce-l01", "simple-panel";
+				label = "TIM: fancom display";
+				status = "okay";
+
 				backlight = <&backlight_lvds>;
+				power-supply = <&regulator_3v3>;
+
 
 				port {
 					panel_in_lvds: endpoint {
@@ -58,17 +92,27 @@
 	};
 
 	fragment@3 {
-		target = <&i2c_csi_dsi>;
+		target = <&i2c1>;
 		__overlay__ {
 			#gpio-cells = <2>;
 			#address-cells = <1>;
 			#size-cells = <0>;
 			status = "okay";
 
-			bridge@2c {
+			pinctrl-names = "default";
+			pinctrl-0 = <&i2c1_pins>;
+			clock-frequency = <400000>;
+
+			sn65dsi84@2c {
 				compatible = "ti,sn65dsi83";
 				reg = <0x2c>;
-				enable-gpios = <&gpio 4 0>;
+				enable-gpios = <&gpio 11 GPIO_ACTIVE_HIGH>;
+
+				pinctrl-names = "default";
+				pinctrl-0 = <&dsi_lvds_en>;
+				status = "okay";
+
+				interrupts = <36 IRQ_TYPE_LEVEL_HIGH>;
 
 				ports {
 					#address-cells = <1>;
@@ -78,7 +122,6 @@
 						reg = <0>;
 						bridge_in: endpoint {
 							remote-endpoint = <&dsi_out_port>;
-							data-lanes = <0 1 2 3>;
 						};
 					};
 
@@ -98,11 +141,12 @@
 		__overlay__ {
 			#address-cells = <1>;
 			#size-cells = <0>;
+			power-domains = <&power 18>;
 			status = "okay";
 			port {
 				dsi_out_port: endpoint {
 					remote-endpoint = <&bridge_in>;
-					data-lanes = <0 1 2 3>;
+					data-lanes = <0 1>;
 				};
 			};
 		};
@@ -117,6 +161,51 @@
 		
 	fragment@6 {
 		target = <&i2c0mux>;
+		__overlay__ {
+			status = "okay";
+		};
+	};
+
+
+
+	fragment@20 {
+		target = <&vc4>;
+		__overlay__ {
+			status = "okay";
+		};
+	};
+	fragment@21 {
+		target = <&hvs>;
+		__overlay__ {
+			status = "okay";
+		};
+	};
+	fragment@22 {
+		target = <&v3d>;
+		__overlay__ {
+			status = "okay";
+		};
+	};
+	fragment@23 {
+		target = <&clocks>;
+		__overlay__ {
+			claim-clocks = <
+				BCM2835_PLLD_DSI0
+				BCM2835_PLLD_DSI1
+				BCM2835_PLLH_AUX
+				BCM2835_PLLH_PIX
+			>;
+		};
+	};
+	fragment@24 {
+		target = <&vec>;
+		__overlay__ {
+			status = "okay";
+		};
+	};
+
+	fragment@25 {
+		target = <&txp>;
 		__overlay__ {
 			status = "okay";
 		};
