--- a/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
+++ b/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
@@ -166,8 +166,6 @@
 		};
 	};
 
-
-
 	fragment@20 {
 		target = <&vc4>;
 		__overlay__ {
@@ -197,6 +195,7 @@
 			>;
 		};
 	};
+
 	fragment@24 {
 		target = <&vec>;
 		__overlay__ {
@@ -207,6 +206,34 @@
 	fragment@25 {
 		target = <&txp>;
 		__overlay__ {
+			status = "okay";
+		};
+	};
+
+	fragment@26 {
+		target = <&pixelvalve0>;
+		__overlay__  {
+			status = "okay";
+		};
+	};
+
+	fragment@27 {
+		target = <&pixelvalve1>;
+		__overlay__  {
+			status = "okay";
+		};
+	};
+
+	fragment@28 {
+		target = <&pixelvalve2>;
+		__overlay__  {
+			status = "okay";
+		};
+	};
+
+	fragment@28 {
+		target = <&pixelvalve3>;
+		__overlay__  {
 			status = "okay";
 		};
 	};
