--- a/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
+++ b/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
@@ -49,16 +49,6 @@
 	fragment@2 {
 		target-path = "/";
 		__overlay__ {
-			regulator_3v3: regulator_3v3 {
-				compatible = "regulator-fixed";
-				regulator-name = "fixed-3v3";
-				regulator-min-microvolt = <3300000>;
-				regulator-max-microvolt = <3300000>;
-				enable-active-high;
-				regulator-boot-on;
-				regulator-always-on;
-			};
-
 			backlight_lvds: backlight {
 				compatible = "pwm-backlight";
 				pwms = <&pwm 0 5000000>; /* 200Hz */
@@ -67,7 +57,7 @@
 				default-brightness-level = <800>;
 				enable-gpios = <&gpio 17 GPIO_ACTIVE_HIGH>;
 
-				power-supply = <&regulator_3v3>;
+				power-supply = <&vdd_3v3_reg>;
 				pinctrl-names = "default";
 				pinctrl-0 = <&pwm_pins_en>;
 				status = "okay";
@@ -226,13 +216,6 @@
 
 	fragment@28 {
 		target = <&pixelvalve2>;
-		__overlay__  {
-			status = "okay";
-		};
-	};
-
-	fragment@28 {
-		target = <&pixelvalve3>;
 		__overlay__  {
 			status = "okay";
 		};
