--- a/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
+++ b/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
@@ -67,7 +67,7 @@
 				status = "okay";
 
 				backlight = <&backlight_lvds>;
-				power-supply = <&regulator_3v3>;
+				power-supply = <&vdd_3v3_reg>;
 
 				port {
 					panel_in_lvds: endpoint {
