Reserve GPIO17 as output

--- a/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
+++ b/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
@@ -33,6 +33,11 @@
 				brcm,function = <BCM2835_FSEL_ALT2>;
 				brcm,pull = <BCM2835_PUD_UP>;
 			};
+
+			backlight_en: backlight_en {
+				brcm,pins = <17>; /* pin 50 */
+				brcm,function = <BCM2835_FSEL_GPIO_OUT>;
+			};
 		};
 	};
 
