FANO-999: Use 4 lanes in dts insteaf of 2

--- a/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
+++ b/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
@@ -114,7 +114,7 @@
 						reg = <0>;
 						bridge_in: endpoint {
 							remote-endpoint = <&dsi_out_port>;
-							data-lanes = <0 1>;
+							data-lanes = <0 1 2 3>;
 						};
 					};
 
