--- a/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
+++ b/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
@@ -139,6 +139,7 @@
 			port {
 				dsi_out_port: endpoint {
 					remote-endpoint = <&bridge_in>;
+					data-lanes = <0 1 2 3>;
 				};
 			};
 		};
