Changing to lvds panel adding dts entry for lvds channel A+B

--- a/Documentation/devicetree/bindings/display/bridge/ti,sn65dsi83.yaml
+++ b/Documentation/devicetree/bindings/display/bridge/ti,sn65dsi83.yaml
@@ -88,7 +88,7 @@ properties:
 
       port@3:
         $ref: /schemas/graph.yaml#/properties/port
-        description: Video port for LVDS Channel-A output (panel or bridge).
+        description: Video port for LVDS Channel-B output (panel or bridge).
 
         properties:
           endpoint:
