--- a/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
+++ b/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
@@ -83,19 +83,23 @@
 					/* clock frequency of 70.93Mhz in the datasheet is for single LVDS channel */
 					/* since we use dual LVDS channel, the clock frequency is 2*70.93Mhz */
 					/* the bridge driver will correct this */
-					clock-frequency = <141860000>;
+					/* vc4_dsi.c: however, the dsi parent_rate is 3Ghz and the dsi-divider is fixed to 6 */
+					/* (3Ghz / 3)/6 = 166.666Mhz. (166.666Mhz * 24bpp) / 2*#lanes = 500Mhz DSI clock */
+					/* (3Ghz / 4)/6 = 125Mhz. (125Mhz * 24bpp) / 2*#lanes = 375Mhz DSI clock */
+					/* we'll choose for the 375Mhz DSI clock, with a divider of 6 in the bridge, resulting in 62.5Mhz */
+					clock-frequency = <125000000>;
 
 					/* the hactive and porches in the datasheet are for a single LVDS channel */
 					/* since we use dual LVDS channel, double everything */
 					hactive = <1920>;
-					hsync-len = <70>;
-					hfront-porch = <70>;
-					hback-porch = <70>;
+					hsync-len = <60>;
+					hfront-porch = <60>;
+					hback-porch = <60>;
 
 					vactive = <1080>;
-					vsync-len = <10>;
-					vfront-porch = <10>;
-					vback-porch = <10>;
+					vsync-len = <4>;
+					vfront-porch = <3>;
+					vback-porch = <3>;
 
 					hsync-active = <0>;
 					vsync-active = <0>;
