change default color-depth to 32 bit

--- a/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
+++ b/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
@@ -222,6 +222,12 @@
 			status = "okay";
 		};
 	};
+	fragment@22 {
+		target = <&v3d>;
+		__overlay__ {
+			status = "okay";
+		};
+	};
 	fragment@23 {
 		target = <&clocks>;
 		__overlay__ {
