--- a/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
+++ b/arch/arm/boot/dts/overlays/vc4-kms-dsi-ti-sn65dsi83-overlay.dts
@@ -159,7 +159,7 @@
 						reg = <0>;
 						bridge_in: endpoint {
 							remote-endpoint = <&dsi_out_port>;
-							data-lanes = <0 1 2 3>;
+							data-lanes = <0 1 2>;
 						};
 					};
 
@@ -190,7 +190,7 @@
 			port {
 				dsi_out_port: endpoint {
 					remote-endpoint = <&bridge_in>;
-					data-lanes = <0 1 2 3>;
+					data-lanes = <0 1 2>;
 				};
 			};
 		};
