--- a/Documentation/devicetree/bindings/display/bridge/ti,sn65dsi83.yaml
+++ b/Documentation/devicetree/bindings/display/bridge/ti,sn65dsi83.yaml
@@ -50,6 +50,7 @@ properties:
               data-lanes:
                 description: array of physical DSI data lane indexes.
                 minItems: 1
+                maxItems: 4
                 items:
                   - const: 1
                   - const: 2
@@ -70,6 +71,7 @@ properties:
               data-lanes:
                 description: array of physical DSI data lane indexes.
                 minItems: 1
+                maxItems: 4
                 items:
                   - const: 1
                   - const: 2
@@ -80,9 +82,21 @@ properties:
         $ref: /schemas/graph.yaml#/properties/port
         description: Video port for LVDS Channel-A output (panel or bridge).
 
+        properties:
+          endpoint:
+            $ref: /schemas/graph.yaml#/$defs/endpoint-base
+            description: LVDS Channel-A output endpoint
+            unevaluatedProperties: false
+
       port@3:
         $ref: /schemas/graph.yaml#/properties/port
         description: Video port for LVDS Channel-B output (panel or bridge).
+
+        properties:
+          endpoint:
+            $ref: /schemas/graph.yaml#/$defs/endpoint-base
+            description: LVDS Channel-B output endpoint
+            unevaluatedProperties: false
 
     required:
       - port@0
