FOP-3860: Set USB monitoring on y

--- a/arch/arm64/configs/fancom_whc_defconfig
+++ b/arch/arm64/configs/fancom_whc_defconfig
@@ -1470,3 +1470,4 @@ CONFIG_PCI_DEBUG=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+CONFIG_USB_MON=y
