--- a/arch/arm64/configs/fancom_whc_defconfig
+++ b/arch/arm64/configs/fancom_whc_defconfig
@@ -720,6 +720,7 @@ CONFIG_USB_HIDDEV=y
 CONFIG_I2C_HID=m
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
+CONFIG_USB_MON=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PLATFORM=y
 CONFIG_USB_DWCOTG=y
