Fix build warning

--- a/arch/arm64/configs/fancom_whc_defconfig
+++ b/arch/arm64/configs/fancom_whc_defconfig
@@ -1440,9 +1440,8 @@ CONFIG_KEYBOARD_GPIO=y
 # RTC
 #
 CONFIG_I2C_CHARDEV=y
-CONFIG_I2C_MUX_PINCTRL=y
 CONFIG_I2C_BCM2708=y
-CONFIG_REGMAP_I2C=y
+CONFIG_REGMAP_I2C=m
 CONFIG_I2C_BCM2835=y
 CONFIG_RTC_DRV_PCF8523=y
 #
