--- a/arch/arm64/configs/fancom_hmi_defconfig
+++ b/arch/arm64/configs/fancom_hmi_defconfig
@@ -624,13 +624,13 @@ CONFIG_REGULATOR_ARIZONA_MICSUPP=m
 CONFIG_REGULATOR_GPIO=y
 CONFIG_DRM=y
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
-CONFIG_DRM_PANEL_LVDS=m
-CONFIG_DRM_PANEL_SIMPLE=m
+CONFIG_DRM_PANEL_LVDS=y
+CONFIG_DRM_PANEL_SIMPLE=y
 CONFIG_DRM_DISPLAY_CONNECTOR=m
-CONFIG_DRM_SIMPLE_BRIDGE=m
-CONFIG_DRM_TI_SN65DSI83=m
-CONFIG_DRM_V3D=m
-CONFIG_DRM_VC4=m
+CONFIG_DRM_SIMPLE_BRIDGE=
+CONFIG_DRM_TI_SN65DSI83=y
+CONFIG_DRM_V3D=y
+CONFIG_DRM_VC4=y
 CONFIG_FB_BCM2708=y
 CONFIG_FB_UDL=m
 CONFIG_FB_SIMPLE=y
